<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
	android:layout_height="match_parent">

    <ListView android:id="@+id/velo_list" android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:layout_centerHorizontal="true"
			  android:headerDividersEnabled="true"
			  android:scrollIndicators="right"
			  android:paddingTop="5dp"
			  android:layout_below="@+id/show_all_button"
			  android:layout_above="@+id/showInactiveCheckBox"/>

	<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all_button_text"
        android:id="@+id/show_all_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginLeft="10dp"/>

	<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_list_button_text"
        android:id="@+id/clear_all_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginRight="10dp"/>

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/show_inactive_cb_text"
		android:id="@+id/showInactiveCheckBox"
		android:layout_alignParentBottom="true"
		android:layout_alignLeft="@+id/show_all_button"
		android:layout_alignStart="@+id/show_all_button"
		android:layout_marginLeft="32dp"
		android:layout_marginStart="32dp"
		android:layout_marginBottom="6dp"
		android:checked="true"
		android:textColor="@color/accent_material_light"/>
</RelativeLayout>
